svc_deploy_main.yml
---
# svc-shop
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  selector:
    app: svc-main
  ports:
  - port: 80
    targetPort: 80



---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-main
spec:
  replicas: 5
  selector:
    matchLabels:
      app: svc-main
  template:
    metadata:
      labels:
        app: svc-main
    spec:
      containers:
      - name: svc-main
        image: blowswhl/portal:main
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
